working api done

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 Port='8080'
 JWT_SECRET='UUSECRET_VERYTAJNY'
+MONGODB_URI="mongodb+srv://janport:test1@bbsy-db.xwxczhf.mongodb.net/shopping_lists_hw"
