--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
   },
   "homepage": "https://github.com/hnzik/unicorn-ukoly-be#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-validator": "^7.0.1",
     "jet-validator": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.1",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "concurrently": "^8.2.2",
